--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-/node_modules
+/Domain Software/Test App/node_modules
+/Platform Sidecars/License-Manager/node_modules
+/Platform Sidecars/Identity-Manager/node_modules
