added app server request

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Domain Software/Test App/node_modules
 /Platform Sidecars/License-Manager/node_modules
 /Platform Sidecars/Identity-Manager/node_modules
+/Platform Sidecars/Router/node_modules
