--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,29 @@ version: '3'
 services:
 
     sda-test-app:
-            image: scaleit/spsc-identity-manager:demo1.0.0
-            build: ./Domain Software/Test App
-            # no port declaration because the app should be isolated
-
-    spsc-identity-mananger:
+        image: scaleit/sda-test-app:demo1.0.0
+        build: ./Domain Software/Test App
+        # no port declaration because the app should be isolated
+        ports:
+            - 1003:1003
+            
+    x-spsc-identity-mananger:
         image: scaleit/spsc-identity-manager:demo1.0.0
         build: ./Platform Sidecars/Identity-Manager
         ports:
             - 1001:1001
 
-    spsc-license-mananger:
+    x-spsc-license-mananger:
         image: scaleit/spsc-license-manager:demo1.0.0
         build: ./Platform Sidecars/License-Manager
         ports:
             - 1002:1002
 
-    spsc-router:
+    x-spsc-router:
         image: scaleit/spsc-router:demo1.0.0
         build: ./Platform Sidecars/Router
         ports:
             - 80:1000
+        environment:
+            - VIRTUAL_HOST=mini-app.scale-it.org
+            - VIRTUAL_PORT=80
